# BSplineForEvisPJ

./: README.md  plot.py  rotation.txt
C++/: CMakeLists.txt
C++/include/: lie_bspline.h
C++/src/: CMakeLists.txt
C++/test/: exp.cpp
Matlab/draw_bsp/: CoxdeBoor.m  RCoxdeBoor.m  cubicBspline.m  interp.mat  reverse_bsp.m  test.m  test2.m
Python/: BSplineExamples.py  interpolation.txt  plot.py
draw_bsp/: test.m
include/: lie_bspline.h
src/: CMakeLists.txt  lie_bspline.cpp
test/: CMakeLists.txt  test.cpp
visualization/: bspline.m  interpolation.txt
